-> Merged GUI with Backend -> Added README -> Added LICENSE -> Revised Generators -> Revised POM -> Revised *.fxml -> a little bit of cleaning